--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -57,9 +57,10 @@
 					</li>
 					<li>
 						<form action="" method="post">
+							<a href="/" >
 							<button class="logout" type="submit">
-								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-							</button>
+								Cerrar sesión </a><i class="fas fa-sign-in-alt"></i> 
+							</button>	
 						</form>
 					</li>
 					<!-- Solo deslogueado <li>
