--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -21,7 +21,7 @@
 				<form>
 					<ul>
 					  <li>
-					   <label for="producto">Nombre del producto</label>
+					   <label for="producto"></label>
 					   <input type="text" id="product_nombre" name="product_nombre">
 					 </li>
 					 <li>
