--- a/views/product.ejs
+++ b/views/product.ejs
@@ -337,7 +337,7 @@
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/profile">Silvestre Linguin </a> </strong>
-								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+								 Experiencia 10 puntos. Voleria mil veces!</p>
 							</div>
 						</article>
 						<article>
@@ -346,8 +346,8 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									<strong> <a href="/profile">Nandia Gomez </a> </strong>
+									No me gusto, poriciones chicas y mala atencion. .</p>
 							</div>
 						</article>
 						<article>
@@ -356,8 +356,29 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<strong> <a href="/profile"> Natalia Sliped </a> </strong>
+									Todo excelente! La atención de todo el equipo super profesional! Todo cuidado al detalle! Cada plato espectacular. Super recomendable! Me encantó!</p>
+							</div>
+						</article>
+						<article>
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
+							<div class="data">
+								<p class="user">
+									<strong> <a href="/profile"> Benjamin Reynoso </a> </strong>
+									Atencion y calidad de sus carnes son perfectas. Todo mejora a medida que pasan el tiempo . No es económico pero siempre vale la pena la experiencia Don Julio, es eso experiencia de sabores y atencion
+									</p>
+							</div>
+						</article>
+						<article>
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
+							<div class="data">
+								<p class="user">
+									<strong> <a href="/profile">Camila Peña </a> </strong>
+									Muy bueno!! Me encanto el lugar. El hotel es hermoso. 
 									</p>
 							</div>
 						</article>
@@ -398,8 +419,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+									<strong> <a href="/profile"> Pilar Chif </a> </strong>
+									 Increible, buenisima atencion. Precios altos pero lo vale!</p>
 								</div>
 							</article>
 							<article>
@@ -408,8 +429,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+										<strong> <a href="/profile"> Teo Milena </a> </strong>
+										Caro, pero riquisimo!</p>
 								</div>
 							</article>
 							<article>
@@ -418,32 +439,34 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<strong> <a href="/profile">Lucas Sanchez </a> </strong>
+									Cada plato es una obra de arte que te va llevando en un viaje gastronómico increíble. La calidad, presentación, ambientación, maridaje, todo en una perfecta sintonia que sólo puede lograr Pedro Bargero.</p>
+								</div>
+							</article>
+							<article>
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
+								<div class="data">
+									<p class="user">
+										<strong> <a href="/profile"> Marisol Orio </a> </strong>
+										hemos ido varias veces con mi marido, la primera vez porque su chef inicial fue Soldad Nardeli, quien es una de mis preferidas, por su trayectoria en el rubro. siempre sorprenden con sus platos, tanto en la elaboración como la presentación. insuperables.</p>
+								</div>
+							</article>
+							
+	
+							<article>
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
+								<div class="data">
+									<p class="user">
+										<strong> <a href="/profile">Baltazar Gomez</a> </strong>
+										Rico pero no volveria. La relacion precio calidad no es buena.
 										</p>
 								</div>
 							</article>
-							<article>
-								<div class="icono-usuario-comentario">
-									<i class="far fa-user"></i>
-								</div>
-								<div class="data">
-									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
-								</div>
-							</article>
-							<article>
-								<div class="icono-usuario-comentario">
-									<i class="far fa-user"></i>
-								</div>
-								<div class="data">
-									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-								</div>
-							</article>
+							
 	
 						</section>
 						<form class="form" action="" method="POST">
@@ -480,8 +503,8 @@
 							</div>
 							<div class="data">
 								<p class="user">
-								<strong> <a href="/profile">Nombre usuario: </a> </strong>
-								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+								<strong> <a href="/profile"> Soledad Parson </a> </strong>
+								 Riquisimo! Ni parecia comida vegana. Platos riquisimos!!</p>
 							</div>
 						</article>
 						<article>
@@ -490,8 +513,8 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									<strong> <a href="/profile"> Milena Iriguri</a> </strong>
+									No soy vegana, pero tengo que decir que la comida es espectacular! Voleria mil veces mas!</p>
 							</div>
 						</article>
 						<article>
@@ -500,8 +523,8 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<strong> <a href="/profile"> Felipe de Areado </a> </strong>
+								El lugar es muy agradable. Personalemente no me gusta la comida vegana asi que no me gusto, pero el lugar es lindo y la atencion es buena.
 									</p>
 							</div>
 						</article>
@@ -511,22 +534,11 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+									<strong> <a href="/profile"> Olivia Reyes </a> </strong>
+									No me gusto para nada, relacion precio calidad mala. Lo unico bueno es el lugar, la deco muy buena!</p>
 							</div>
 						</article>
-						<article>
-							<div class="icono-usuario-comentario">
-								<i class="far fa-user"></i>
-							</div>
-							<div class="data">
-								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-							</div>
-						</article>
-
+						
 					</section>
 					<form class="form" action="" method="POST">
 						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
@@ -562,8 +574,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+									<strong> <a href="/profile"> Eduardo Breu </a> </strong>
+									Milojas de dulce de leche con merengue italiano. Excelente!!! La tuvimos que llevar porque estaba completo. Ni una mesa! Muy amables en la atención! Gracias!</p>
 								</div>
 							</article>
 							<article>
@@ -572,8 +584,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+										<strong> <a href="/profile"> Milagros Saguier </a> </strong>
+										Todo perfecto.. el ambiente es precioso, la atencion increible. Si viviera mas cerca podria comer alli todos los días Deliciosos todos los platos, la pastelería y hasta el cafe</p>
 								</div>
 							</article>
 							<article>
@@ -582,8 +594,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										<strong> <a href="/profile"> Jorge Parque</a> </strong>
+										Una estafa !! Esto es un desayuno completo, lo que ven blanco es un yogurt y lo rojizo es bacon. La atención es pésima. Y no hay como ven en la foto alguna elaboración. No lo recomiendo. La palta estaba verde y solo “disculpa” NUNCA
 										</p>
 								</div>
 							</article>
@@ -593,21 +605,11 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+										<strong> <a href="/profile"> Melanie Grey </a> </strong>
+										Recomiendo para un almuerzo, para la cena no tanto. Muy ricos platos, muy lindo lugar.</p>
 								</div>
 							</article>
-							<article>
-								<div class="icono-usuario-comentario">
-									<i class="far fa-user"></i>
-								</div>
-								<div class="data">
-									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-								</div>
-							</article>
+						
 	
 						</section>
 						<form class="form" action="" method="POST">
@@ -644,8 +646,8 @@
 							</div>
 							<div class="data">
 								<p class="user">
-								<strong> <a href="/profile">Nombre usuario: </a> </strong>
-								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+								<strong> <a href="/profile"> Pedro Patruli</a> </strong>
+								Fascinante: todo el énfasis se pone en la comida y el servicio. El chef / propietario está presente y vigila la habitación con atención para ver que todos los invitados estén contentos. La comida es creativa, fresca y sencillamente preparada con excelentes sabores y texturas. Bien vale la pena la visita. No aceptan reservaciones y generalmente hay una fila cuando abren a las 8: vaya temprano o tarde..</p>
 							</div>
 						</article>
 						<article>
@@ -654,8 +656,8 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									<strong> <a href="/profile"> Freddy Braun</a> </strong>
+									La relacion del precio con sus platos lo vale. Es caro, pero riquisimo. Si tenes la oportunidad por lo menos visitarlo una vez, es increible</p>
 							</div>
 						</article>
 						<article>
@@ -664,8 +666,9 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<strong> <a href="/profile"> Alex Navia </a> </strong>
+									Vine aquí esta noche para cenar con un amigo que es pescatariano y todo lo que puedo decir es GUAU, la comida fue sensacional. Ojalá pudiera recomendar los platos exactos que pedimos, pero el menú cambia con regularidad. No podría recomendar este lugar más, era creativo pero simple. Fue un ambiente divertido y relajado, si estás en Buenos Aires, ¡este es un lugar imprescindible!
+No aceptan reservaciones, pero llegamos a las 8.30 y nos dijeron que era un mínimo de espera de 30/40 minutos, así que anotamos nuestros nombres y nos preguntamos por las concurridas calles de Palermo y luego volvimos y pedimos una bebida mientras esperábamos y No nos hicieron esperar más de lo que dijeron, ¡sin embargo, esto puede ser diferente para grupos grandes!
 									</p>
 							</div>
 						</article>
@@ -675,21 +678,11 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+									<strong> <a href="/profile"> Isadora Martinez </a> </strong>
+									Muy rico. Para ir con amigos es un buen plan!</p>
 							</div>
 						</article>
-						<article>
-							<div class="icono-usuario-comentario">
-								<i class="far fa-user"></i>
-							</div>
-							<div class="data">
-								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-							</div>
-						</article>
+						
 
 					</section>
 					<form class="form" action="" method="POST">
@@ -726,8 +719,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+									<strong> <a href="/profile"> Maribel Muñoz </a> </strong>
+									 No tengo palabras para describir la experiencia que tuve. Espectacular!!</p>
 								</div>
 							</article>
 							<article>
@@ -736,8 +729,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+										<strong> <a href="/profile"> Agustina Paladini </a> </strong>
+										La verdad que no me gusto. Fui con cinco amgios y con reserva y me hicieron esperar 20 minutos. Ni un trago de cortesia.</p>
 								</div>
 							</article>
 							<article>
@@ -746,8 +739,8 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										<strong> <a href="/profile"> Nicolas Benbenuto</a> </strong>
+										Excelente ambientación, decoración y atención, con platos muy buenos y excelente cata de vinos . Hay q ir temprano porque los 11 pasos tardan 3 hs
 										</p>
 								</div>
 							</article>
@@ -757,21 +750,11 @@
 								</div>
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+										<strong> <a href="/profile"> Cristina Silue </a> </strong>
+										Es una experiencia increíble. Si te gusta descubrir distintas combinaciones y disfrutar de sensaciones diferentes... Es un viaje placentero para tu paladar. Realmente lo recomiendo.</p>
 								</div>
 							</article>
-							<article>
-								<div class="icono-usuario-comentario">
-									<i class="far fa-user"></i>
-								</div>
-								<div class="data">
-									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-								</div>
-							</article>
+							
 	
 						</section>
 						<form class="form" action="" method="POST">
