--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -12,49 +12,57 @@
 	<!-- /Header -->
 
 	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Editar mi perfil</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> 
-				<form>
-					<ul>
-					  <li>
-					   <label for="nombre">Nombre:</label>
-					   <input type="text" id="nombre" name="user_nombre">
+
+	he "ultimos" products -->
+			<div class="form-registracion">
+				<h2 class="col-12"> 
+					<form class="tablaRegistracion">
+					<ul class= "registracionItems">
+					  <li class="bordearDiferente"> 
+						<!--<label class="form-label" for="nombre">Nombre:</label> -->
+						<input class="form-input" type="text" id="nombre" placeholder="Nombre"name="user_nombre">
+					   
 					 </li>
-					 <li>
-						 <label for="apellido">Apellido:</label>
-						 <input type="text" id="apellido" name="user_apellido">
+					 <li class="bordear">
+						<!-- <label class="form-label" for="apellido">Apellido:</label>-->
+						 <input class="form-input" type="text" id="apellido" placeholder="Apellido"name="user_apellido">
 					 </li>
-					 <li>
-						<label for="usuario">Nombre de usuario:</label>
-						<input type="text" id="usuario" name="user_usuario">
-					</li>
-					 <li>
-						<label for="sexo">sexo:</label> <br>
-						<input type="radio" id="sexo" name="user_sexo" value="masculino"> masculino <br>
-						<input type="radio" id="sexo" name="user_sexo" value="femenino"> femenino <br>
+					
+					 
+					 <li class="sexo-entero">
+						<div><label class="form-label" for="sexo">Sexo</label> <br/></div>
+						<div class="sexo-eleccion">
+
+							<div class="seleccionador-sexo"><input class="imputradio"  type="radio" id="sexo" name="user_sexo" value="masculino" > </div>
+							
+							<div><p class="radio">Masculino</p> </div>
+							
+							<div class="seleccionador-sexo"><input  class="imputradio" type="radio" id="sexo" name="user_sexo" value="femenino"></div>
+						 	
+							<div><p class="radio">Femenino</p> </div>
+						</div>
+						
 					 </li>
-					 <li>
-						 <label for="mail">Correo electrónico:</label>
-						 <input type="email" id="mail" name="user_mail">
+					
+	
+					 <li class="bordearArriba">
+						<!--- <label class="form-label" for="mail">Correo electrónico:</label> -->
+						 <input class="form-input" type="email" id="mail" placeholder="Correo electrónico" name="user_mail">
 					 </li>
-					 <li>
-						 <label for="contraseña">Contraseña actual:</label>
-						 <input type="password" id="contraseña" name="user_contraseña">
+					 <li class="bordear">
+						<!-- <label class="form-label" for="contraseña">Contraseña:</label>-->
+						 <input class="form-input" type="password" id="contraseña"placeholder="Contraseña actual" name="user_contraseña">
+						 <input class="form-input" type="password" id="nueva-contraseña"placeholder="Nueva contraseña" name="user_contraseña">
 					 </li>
-					 <li>
-						<label for="contraseña">Contraseña nueva:</label>
-						<input type="password" id="contraseña" name="user_contraseña">
-					</li>
-						 <input type="submit" value="Guardar cambios">  
+	
+				
+					<a class="actualizar" href="/profile">Actualizar mi perfil</a>
+					
+	
 				   </ul>
 				  </form>
-			</h2>
-
+				</h2>
+			</div>
 
 	<!-- footer -->
 	<%-include("./partials/footer.ejs")%>
