cambios en header

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -674,7 +674,7 @@ margin-top: 14px;
     display: block;
   width: 70%;
   height: 45px;
- background-color: #6e6372;;
+ background-color: d1c3ac;;
   font-size: 30px;
   border-radius: 10px;
   border: none;
