--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -41,7 +41,7 @@
 			</div>
 	
 			<button class="btn-toggle-navbar">
-				<i class="fas fa-bars"></i>
+				<a href="/search-results"> <i class="fas fa-bars"></i></a>
 			</button>
 	
 			<nav class="main-navbar">
