--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -12,8 +12,13 @@
 	<!-- /Header -->
 
 	<!-- Novedades -->
+	<div class="container products-wrapper">
+		<div class="row">
+			<div class="col-12">
+				<h2 class="products-title">Editar mi perfil </h2>
+			</div>
 
-	he "ultimos" products -->
+	
 			<div class="form-registracion">
 				<h2 class="col-12"> 
 					<form class="tablaRegistracion">
