--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,7 +21,7 @@
 
 					<h1 class="main-title"> Federico Roca</h1>
 		
-					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
+					<a href='/product' class="btn mt-3 ml-4" href="">SEGUIR</a>
 					
 				</div>
 				<a class="editar-perfil" href="/profile-edit">Editar perfil</a>
