--- a/views/register.ejs
+++ b/views/register.ejs
@@ -57,7 +57,7 @@
 						 <input class="form-input" type="password" id="contraseña"placeholder="Contraseña" name="user_contraseña">
 					 </li>
 	
-						 <input class="form-input" type="submit"  value="Registrarse">  
+					 <a class="actualizar-perfil" href="/profile">Registrarme</a>
 	
 				   </ul>
 				  </form>
