productos header logueado

--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -46,8 +46,8 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li class="log"><a href="/">Favoritos</a></li>
-					<li class="log"><a href="/product-add">Añadir favoritos</a></li>
+					<li class="log"><a href="/product">Productos</a></li>
+					<li class="log"><a href="/product-add">Añadir producto</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
