login y header botones

--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -60,7 +60,7 @@
 							<a href="/" >
 							<button class="logout" type="submit">
 								Cerrar sesión </a><i class="fas fa-sign-in-alt"></i> 
-							</button>	
+							</button>	</a>
 						</form>
 					</li>
 					<!-- Solo deslogueado <li>
