--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 					<label class="form-label" for="contraseña">Contraseña:</label>
 					<input class="form-input" type="password" id="contraseña" name="user_contraseña">
 				</li>
-				  <input class="form-input" type="submit" value="Iniciar sesión">  
+				<a class="actualizar-perfil" href="/profile">Iniciar sesión</a>
 					</ul>
 				</form>
 			</h2>
