--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Más comentados</h2>
+				<h2 class="products-title">Restaurantes</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
@@ -145,8 +145,65 @@
 					</a>
 				</section>
 			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/alos.jpg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Alo's</h2>
+							<p>De afuera este garage sobre calle Araoz poco te va a llevar a un restaurante en esta lista, pero todo eso se borra cuando probás el primer plato..</p>
+							<p>Comentarios: 12</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/chila.jpeg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Chila</h2>
+							<p>Ubicado en el hotel Four Seasons, en Buenos Aires. Elena es probablemente el lugar donde más sofisticado te sientas comiendo un bife de chorizo en Buenos Aires..</p>
+							<p>Comentarios: 12</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/donjulio.jpg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Don Julio</h2>
+							<p>El Comedor en el bajo Belgrano tiene desayunos, almuerzos, meriendas y cenas, uno más rico que el otro..</p>
+							<p>Comentarios: 12</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/dabbang.jpg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Niño Gordo</h2>
+							<p>El mega reconocido y ya a esta instancia histórico proyecto de Germán Martitegui sigue ocupando los primero puestos de la lista. Con un precio fijo, es una experiencias gastronómicas por pasos pionera en la utilización de producto local de altísima calidad.</p>
+							<p>Comentarios: 12</p>
+						</article>
+					</a>
+				</section>
+			</div>
 		</div>
 	</div>
+	
 	<!-- /Más comentados -->
 
 
