--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -45,7 +45,7 @@
 				
 				 <input class="add" type="password" id="descipcion"placeholder="Descripcion del producto" name="user_contraseña">
 			 </li>
-			 <a class="actualizar-perfil" href="/product">Añadir producto a Mis Favoritos</a>
+			 <a class="actualizar-perfil" href="/product">Añadir producto</a>
 		   </ul>
 		  </form>
 		</h2>
