--- a/public/css/app.css
+++ b/public/css/app.css
@@ -674,8 +674,8 @@ margin-top: 14px;
     display: block;
   width: 70%;
   height: 45px;
- background-color: d1c3ac;;
-  font-size: 30px;
+  margin-bottom: 15px;
+  font-size: 1.5em;
   border-radius: 10px;
   border: none;
   border: 3px solid #4d4454;
