--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,6 +11,7 @@
 	<!-- /Header -->
 
 	<!-- Novedades -->
+	
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
@@ -69,7 +70,7 @@
 	<!-- footer -->
 	<footer class="main-footer">
 		<%-include("./partials/footer.ejs")%>
-	<!-- /footer -->
-</body>
+	<!-- /footer --> 
+</body> -->
 
 </html>
