--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
             </div>
 
             <div class="col-7 col-md-6">
-                <form action="search-results.html" method="GET" class="search-form">
+                <form action="/search-results" method="GET" class="search-form">
                     <input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
                     <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
                 </form>
@@ -22,9 +22,7 @@
             </div>
         </div>
 
-        <button class="btn-toggle-navbar">
-            <a href="/search-results"> <i class="fas fa-bars"></i></a>
-        </button>
+        
 
         <nav class="main-navbar">
             <ul class="left-navbar">
