--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,118 +89,26 @@
 				<h2 class="products-title">Restaurantes</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
+
+			<% for (let i = 0; i < productos.length; i++) { %> 
+
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="/product">
+					<a href="/product/<%= productos[i].id %> ">
 						<figure class="product-box_image">
-							<img src="/images/products/proper.jpeg" alt="cafetera moulinex">
+							<img src="<%= productos[i].imagen %>" alt="">
 						</figure>
 						<article class="product-box_data">
-							<h2>Proper</h2>
-							<p>De afuera este garage sobre calle Araoz poco te va a llevar a un restaurante en esta lista, pero todo eso se borra cuando probás el primer plato..</p>
-							<p>Comentarios: 12</p>
+							<h2><%= productos[i].nombre %></h2>
+							<p><%= productos[i].descripcion %></p>
+							<p>Comentarios: 4 </p>
 						</article>
 					</a>
 				</section>
 			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/elena.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Elena</h2>
-							<p>Ubicado en el hotel Four Seasons, en Buenos Aires. Elena es probablemente el lugar donde más sofisticado te sientas comiendo un bife de chorizo en Buenos Aires..</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/narda.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Narda Comedor</h2>
-							<p>El Comedor en el bajo Belgrano tiene desayunos, almuerzos, meriendas y cenas, uno más rico que el otro..</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/tegui.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Tegui</h2>
-							<p>El mega reconocido y ya a esta instancia histórico proyecto de Germán Martitegui sigue ocupando los primero puestos de la lista. Con un precio fijo, es una experiencias gastronómicas por pasos pionera en la utilización de producto local de altísima calidad.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/alos.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Alo's</h2>
-							<p>De afuera este garage sobre calle Araoz poco te va a llevar a un restaurante en esta lista, pero todo eso se borra cuando probás el primer plato..</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/chila.jpeg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Chila</h2>
-							<p>Ubicado en el hotel Four Seasons, en Buenos Aires. Elena es probablemente el lugar donde más sofisticado te sientas comiendo un bife de chorizo en Buenos Aires..</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/donjulio.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Don Julio</h2>
-							<p>El Comedor en el bajo Belgrano tiene desayunos, almuerzos, meriendas y cenas, uno más rico que el otro..</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/dabbang.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Niño Gordo</h2>
-							<p>El mega reconocido y ya a esta instancia histórico proyecto de Germán Martitegui sigue ocupando los primero puestos de la lista. Con un precio fijo, es una experiencias gastronómicas por pasos pionera en la utilización de producto local de altísima calidad.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
+
+			<% } %> 
+			
 		</div>
 	</div>
 	
