--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,11 +86,11 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Restaurantes</h2>
+				<h2 class="products-title">Mas comentados</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 
-			<% for (let i = 0; i < productos.length; i++) { %> 
+			<% for (let i = 0; i < 4; i++) { %> 
 
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
