--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
 
         <nav class="main-navbar">
             <ul class="left-navbar">
-                
+                <li><a href="/allProducts/:id"></a>TODOS LOS PRODUCTOS</li>
                 <!-- solo logueado <li><a href="">Cargar productos</a></li> -->
             </ul>
 
