--- a/views/product.ejs
+++ b/views/product.ejs
@@ -21,7 +21,7 @@
 			<h2 class="products-title">
 				<%= productos[idSearch].nombre %></h2> 
 			<p class="product-detail-description">
-				<a href="/product-add">Agregar Producto</a>
+				<a href="/add">Agregar Producto</a>
 			</p>
 		</div>
 
@@ -35,7 +35,7 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 
-					<% for (let i=0; i< productos[idSearch].comentarios.search; i++ ) { %> 
+					<!--<% for (let i=0; i< productos[idSearch].comentarios.search; i++ ) { %> 
 						<article>
 							<div class="icono-usuario-comentario">
 								<i class="far fa-user"></i>
@@ -47,15 +47,15 @@
 							</p>
 							</div>
 						</article>
-						<% } %> 
+						<% } %> -->
 
-						<!--<article>
+						<article>
 							<div class="icono-usuario-comentario">
 								<i class="far fa-user"></i>
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile"> Delfina Mirasol</a> </strong>
+									<strong> <a href="/profile"> Ana Gimenez </a> </strong>
 									Un lugar distinto, altamente recomendable. Comida fusión Arg-Japón con algo de picante y salsa agridulces. 👌🏾</p>
 							</div>
 						</article>
@@ -65,7 +65,7 @@
 							</div>
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile"> Carlos Carmen</a> </strong>
+									<strong> <a href="/profile"> Luisa Bengolea</a> </strong>
 									Excelente lugar para probar sabores distintos. Platos completamente distintos a los que probé. Sabores muy suaves que en combinación son increíbles. La atención de 10 también. Super recomendable.
 									</p>
 							</div>
