--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<!-- HOLA PROBANDO -->
+
 <!-- Include Head -->
 <%-include("./partials/head.ejs")%> 
 
@@ -25,7 +25,7 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="/product">
+				<!--<a href="">-->	
 						<figure class="product-box_image">
 							<img src="/images/products/alos2.jpeg" alt="cafetera moulinex">
 						</figure>
@@ -34,12 +34,12 @@
 							<p>Conoce Alo's, no te lo pierdas!.</p>
 						
 						</article>
-					</a>
+					<!--</a>-->
 				</section>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="/product">
+					<!--<a href="/product">-->
 						<figure class="product-box_image">
 							<img src="/images/products/mudra3.jpeg" alt="c">
 						</figure>
@@ -48,12 +48,12 @@
 							<p>2X1 todos los martes y jueves para el almuerzo.</p>
 						
 						</article>
-					</a>
+					<!--</a>-->
 				</section>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="/product">
+					<!--<a href="/product">-->
 						<figure class="product-box_image">
 							<img src="/images/navidad-oferta.jpeg" alt="">
 						</figure>
@@ -62,12 +62,12 @@
 							<p>¡Registrate y te regalamos un cupon de $2000 para que uses en el restaurante que quieras!.</p>
 						
 						</article>
-					</a>
+					<!--</a>-->
 				</section>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="/product">
+					<!--<a href="/product">-->
 						<figure class="product-box_image">
 							<img src="/images/products/donjulio2.jpeg" alt="cafetera moulinex">
 						</figure>
@@ -76,7 +76,7 @@
 							<p>No te pierdas de conocer la nueva sucursal de este increible restaurante ubicado en Palermo.</p>
 						
 						</article>
-					</a>
+					<!--</a>-->
 				</section>
 			</div>
 		</div>
