--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,5 +12,12 @@
 	<link rel="stylesheet" href="/css/app.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Karantina&family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
+ <!-- UIkit CSS -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.4.2/dist/css/uikit.min.css" />
+
+ <!-- UIkit JS -->
+ <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.2/dist/js/uikit.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.2/dist/js/uikit-icons.min.js"></script>
 </head>
 <!--FIJARSE SI ESTAN BIEN LOS HIPERVINCULOS, O SI TIENE QUE IR DIRECTO /CSS O /IMAGES POR SER UN RECURSO ESTATICO -->
+
