--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,6 +57,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+a:hover{
+  text-decoration: none;
+  color: inherit;
+}
 
 figure {
   margin: 0;
